<resources>
    <string name="app_name">  BD Travel Guide</string>
    <string name="submit_rate_b_text">Submit</string>
    <string name="about_Text">
        ---Design And Developed By---\n\nMd. Gias uddin\n\nDepartment of Computer Science And Engineering \n\nUniversity of Chittagong.
    </string>

    <string name="select_district_text">Select District</string>

    <string-array name="select_option">
        <item>ভ্রমণ এলাকা নির্বাচন করুন</item>
        <item>     ভ্রমণ ডায়েরি    </item>
        <item>  ভ্রমণ নির্দেশিকা  </item>
    </string-array>

    <string name="division_text">Select Division</string>

    <string-array name="zoneName">
        <item> নীলগিরি</item>
        <item> নীলাচল</item>
        <item>ডিম  পাহাড়</item>
        <item> মেঘলা</item>
    </string-array>

    <string name="tour_id_text">Tour ID<font size='10'>(only for delete/update)</font></string>
    <string name="share_text">Share</string>
    <string name="feedback_text">FeedBack</string>
    <string name="about_us_text">About Us</string>
    <string name="rate_u_text">Rate Us</string>
    <string name="date_text">Date:dd/mm/yy</string>
    <string name="location_text">Location</string>
    <string name="cost_text">Total Cost</string>
    <string name="feedback_email__text">Your Email</string>
    <string name="feedback_name__text">Your Name</string>
    <string name="feedback_msg_Text">Write Your Message</string>
    <string name="Tour_Details_text">ভ্রমণ বিস্তারিত</string>
    <string name="welcome_Msg">Welcome to Bd Travel Guide</string>
    <string name="Ctg_District">Ctg District</string>
    <string name="List_Item_view">List view</string>
    <string name="loading_text">Loading...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="info_fragment2">নীলাচলে সম্প্রতি নতুন কয়েকটি জায়গা তৈরি করা হয়েছে পর্যটকদের জন্য। এখানকার টিকেট ঘরের পাশে ‘ঝুলন্ত নীলা’ থেকে শুরু করে ক্রমশ নীচের দিকে আরও কয়েকটি বিশ্রামাগার তৈরি করা হয়েছে। এগুলোর মধ্যে উল্লেখযোগ্য হল ‘নীহারিকা’ এবং ‘ভ্যালেন্টাইন’ পয়েন্ট।
পাহাড়ের ঢালে ঢালে সাজানো হয়েছে এ জায়গাগুলো। একটি থেকে আরেকটি একেবারেই আলাদা। একেক জায়গা থেকে সামনের পাহাড়ের দৃশ্যও একেক রকম।
তবে মূল নীলাচলের সৌন্দর্য অনেক বেশি। এখান থেকে পাহাড়ের সৌন্দর্য উপভোগ করা যায় আরও ভালোভাবে।
 এখান থেকে বেশ ভালোভাবে চারপাশের পাহাড়ের সৌন্দর্য উপভোগ করা যায়।
নীলাচল পর্যটন কেন্দ্রের একেবারে চূড়ায় পর্যটকদের জন্য আছে বেশ কয়েকটি পর্যবেক্ষণ কেন্দ্র। নীলাচলের মূল পাহাড়ের শিখরের চারপাশেই মনোরম স্থাপনা শৈলীতে নির্মাণ করা হয়েছে এসব কেন্দ্র। একটি থেকে আরেকটি একেবারেই আলাদা। আর একেক দিক থেকে পাহাড়ের দৃশ্যও একেক রকম। বর্ষা এবং বর্ষা পরবর্তী সময়ে এখানে চলে মেঘের খেলা। কিছুক্ষণ পর পরই দূর পাহাড় থেকে মেঘের ভেলা ভেসে আসে নীলাচলের চূড়ায়। চারপাশ ঢেকে ফেলে শীতল নরম পরশে।
নীলাচলে বাড়তি আকর্ষণ হল এখানকার রিসোর্ট। নাম নীলাচল স্কেপ রিসোর্ট। সাধারণ পর্যটকদের জন্য এ জায়গায় সূর্যাস্ত পর্যন্ত অনুমতি আছে। তবে রিসোর্টের অতিথিদের জন্য সর্বক্ষণই খোলা এ জায়গা।\n\n <b>Credit:bdnews24.com\n\n Photo Credit:https://unsplash.com\n\n</b></string>

    <string name = "Video_credit">\n\n<b>Video Credit: AFZAL NAZIM</b> </string>

<string name =  "info_fragment1">বান্দরবান শহরের সবচেয়ে সুন্দর পর্যটন কেন্দ্র সম্ভবত নীলাচল। সমুদ্রপৃষ্ঠ থেকে প্রায় ১৬শ’ ফুট উঁচু এই জায়গায় বর্ষা, শরৎ কি হেমন্ত— তিন ঋতুতে ছোঁয়া যায় মেঘ।
 এছাড়া এখানে দাঁড়িয়ে দূর থেকে দেখা যায় বান্দরবান শহর আর পাশ দিয়ে বয়ে যাওয়া সাঙ্গু নদী। বান্দরবান জেলা প্রশাসনের উদ্যোগে গড়ে তোলা মনোরম এই পর্যটন কেন্দ্রে সাম্প্রতিক সময়ে নতুন যোগ করা হয়েছে একটি রিসোর্ট। এখন থেকে তাই এখানে বেড়ানোর পাশাপাশি পর্যটকরা রাত যাপনের সুযোগ পাবেন। বান্দরবান শহর থেকে প্রায় ছয় কিলোমিটার দূরে টাইগারপাড়া এলাকা। সেখানকার পাহাড়ের চূড়ায় বান্দরবান জেলা প্রশাসন গড়ে তোলে আকর্ষণীয় এই পর্যটন কেন্দ্র। নাম দেয় নীলাচল পর্যটক কমপ্লেক্স। এখানে পাহাড়ের গায়ে গায়ে পর্যটকদের জন্য আছে নানান ধরনের ব্যবস্থা।
শহর ছেড়ে চট্টগ্রামের পথে প্রায় তিন কিলোমিটার চলার পরেই হাতের বাঁ দিকে ছোট একটি সড়ক এঁকেবেঁকে চলে গেছে নীলাচলে। এ পথে প্রায় তিন কিলোমিটার পাহাড় বেয়ে তাই পৌঁছুতে হয়। মাঝে পথের দুই পাশে ছোট একটি পাড়ায় দেখা যাবে ক্ষুদ্র নৃ গোষ্ঠীর মানুষের বসবাস।</string>


<string name = "Travel_Instruction"><b>ভ্রমণে যাওয়ার আগে এবং যেয়ে কি কি বিষয়ে একটু খেয়াল রাখবেন সেটাও ভালো করে জেনে তারপর যাবেন।\n\n</b>
    <b>ভ্রমণ সম্পর্কিত কিছু টিপস ও কৌশল:\n\n</b>
<b>ক.</b> ট্যুরে সারাদিন কি করবেন তার একটি প্ল্যান করুন। তাতে সারাদিনে সময় কিছু বাঁচবেই, সকল রকম পরিস্থিতির জন্যও আপনি মোটামুটি প্রস্তুত থাকবেন।\n<b>খ.</b> টুরিস্ট রেস্টুরেন্টগুলো এড়িয়ে চলাই ভালো। যেখানে বেড়াতে গিয়েছেন সেখানে আশেপাশে ঘুরে, লোকাল বসবাসকারীরা যেখানে খায় সেখানে খাওয়া-দাওয়া সারবেন। খরচটা কমবে উল্লেখযোগ্যভাবে।\n
<b>গ.</b> একদম ভ্রমণ মৌসুমে না গিয়ে একটু কম টুরিস্টের সমাগম হয় এমন সময়ে ভ্রমণে যান। গ্রীষ্মের ছুটি বা বছর শেষের শীতের বন্ধের সময়টি ভ্রমণের সবথেকে উপযুক্ত মৌসুম বলে বিবেচনা করা হয়। একদম এ সময় না গিয়ে এর কাছাকাছি কোন সময়ে যেতে পারেন। তবে ভ্রমণ স্থানে অফ-সিজনে যাওয়াটা একদমই উচিত নয়।\n
<b>ঘ.</b> ঘুরতে গিয়ে কোন রেস্টুরেন্টে খাওয়ার থেকে কোন দর্শনীয় স্থানে পিকনিক করতে পারেন। এতে আপনি স্থানীয় সংস্কৃতি, রীতিনীতি খুব কাছে থেকে উপলব্ধি করতে পারবেন।\n
<b>ঙ.</b> সাধারণত অধিকাংশ হোটেলেই কমপ্লিমেন্টারি নাস্তা/ব্রেকফাস্ট দেয়া হয়ে থাকে। এখান থেকে ভালো পরিমাণে খেয়ে নিন এবং পরবর্তীতে খাওয়ার জন্যও কিছু সাথে নিয়ে নিতে পারেন।\n
<b>চ.</b> একটা শহরের এক জায়গা থেকে আরেক জায়গায় অভ্যন্তরীণ যাতায়াতের জন্য বাসই সবচেয়ে উত্তম পন্থা। ভ্রমণের স্থান সম্পর্কে যথাযথ জ্ঞান না থাকলে ট্যাক্সি বা রেন্ট-এ-কার এ অনেক সময় অনেক অযাচিত অবস্থায় পড়তে হতে পারে।\n
<b>ছ.</b> হেঁটে যাওয়া বাদ দিয়ে বাস এ যাতায়াতই সব থেকে সাশ্রয়ী। আপনি যদি কোন স্থানে ভ্রমণে যেয়ে রেন্ট-এ-কার থেকে গাড়ি ভাড়া নিয়ে থাকেন এবং নিজেই সে গাড়ি চালান তাহলে একটু ট্র্যাফিক আইন সম্পর্কে সচেতন থেকে ড্রাইভ করুন।\n
<b>জ.</b> কোথায় গাড়ি পার্ক করছেন এ ব্যাপারে একটু সতর্ক থাকুন, কেননা চোরেরা টুরিস্টের গাড়ি বুঝতে পারলে চুরি হওয়ার ঝুঁকি বাড়ে।\n
<b>ঝ.</b> একটি দেশে ঘুরতে যেয়ে তার এক শহর থেকে আরেক শহরে যাতায়াতের সময় কোন পরিবহন ব্যবহার করবেন তার ব্যাপারে ভালোভাবে খোঁজখবর করে নিন।\n
<b>ঞ.</b> পানির একটি বোতল সাথে রাখুন, এবং রেস্টুরেন্ট বা হোটেল থেকে এই বোতলে পানি রিফিল করে নিন। তা না হলে আপনাকে পানির বোতল কিনে খেতে হবে। এবং অবিশ্বাস্য হলেও সত্যি যে পানির বোতলের খরচ বাদ গেলেই দেখবেন আপনার একটা প্রমাণ পরিমাণ টাকা সাশ্রয় হয়েছে যা আপনি শপিংয়ে ব্যয় করতে পারবেন।\n
<b>ট.</b> সাধারণত বেকারিগুলো দিনের শেষে প্রায় অর্ধেক দামে খাবারগুলো বিক্রয় করে থাকে যাতে প্রতিদিন খাবার ফ্রেশ থাকে। আপনি সন্ধ্যার নাস্তাটা কিন্তু এমন বেকারি থেকে সারতে পারেন।\n
<b>ঠ.</b> অনেক ছোটখাটো কিন্তু অতীব প্রয়োজনীয় জিনিস আমরা ভ্রমণকালে নিতে ভুলে যাই। তা হতে পারে টুথব্রাশ, পেস্ট, শেভিং ক্রিম বা রেজর। কখনোবা ফোনের চার্জার। এ ক্ষেত্রে তা কেনার জন্য আপনাকে বাইরে যেতে হবে না। হোটেলেই এইসব সামগ্রী অনেক পরিমাণে থাকে। হোটেল থেকেই আপনি নামমাত্র মুল্যে প্রয়োজনীয় এরকম সামগ্রী কিনে নিতে পারেন।
<b>ড.</b> আপনি যদি গ্রীষ্মে কোথাও ভ্রমন করেন বা উষ্ম আবহাওয়ার কোথাও ঘুরতে যান তাহলে এমন কোন হোটেলে উঠুন যেখানে গরম-ঠাণ্ডা উভয় পানির ব্যবস্থা না, শুধুমাত্র ঠাণ্ডা পানির ব্যবস্থাই আছে।\n
<b>ঢ.</b> কোন দেশে ঘুরতে গেলে খুব সল্প সময়ে সাশ্রয়ীভাবে তাদের সংস্কৃতির সাথে পরিচিত হওয়ার একটা উপায় হল চেষ্টা করুন ঐ দেশি কোন উৎসব বা ফেস্টিভাল এ অংশগ্রহণ করতে। যেমন: ইন্ডিয়ার হোলি, ব্রাজিলের রিও ফেস্টিভাল, ইউএসএ তে ক্রিস্টমাস ইত্যাদি।\n
<b>ণ.</b> যদি আপনি ভ্রমণের খরচটা বাঁচানোর সাথে সাথে নিরাপত্তাও নিশ্চিত করতে চান তাহলে ভ্রমণকারী গ্রুপে বা বন্ধুরা দলবদ্ধ হয়ে ভ্রমনে যেতে পারেন। কোন দেশে ভ্রমণের সময় একটি গ্রুপ একসাথে কিছু করলে কোন  মিউজিয়াম বা থিম পার্ক ট্যুর অনেক সুলভ খরচে করতে পারবেন।\n
<b>ত.</b> এক শহর থেকে আরেক শহর বা দূরের পথ যদি আপনি ট্রেন বা গাড়িতে করে যান, তাহলে তা অবশ্যই রাতে করুন। এতে আপনার রাতে থাকার হোটেলের খরচও বেঁচে যাবে, আবার আপনি একটু অভ্যস্ত হয়ে গেলে গাড়িতেই ঘুমিয়ে নিতে পারবেন। তবে নিজের ব্যাগ ও মূল্যবান জিনিসপত্র সামলে রাখবেন।\n
<b>থ.</b> অবশ্যই কোথাও ঘুরতে যাওয়ার আগে ওয়েবসাইটে এবং ট্যুর গাইডবুক থেকে সে স্থান সম্পর্কে ভালোভাবে জেনে নিন। ট্যুরিজম ওয়েবসাইট, মোবাইল অ্যাপ ব্যবহার করে সেখানের সম্পর্কিত হোটেল বা এয়ারলাইনে কি কি অফার চলছে তা জেনে নিন এবং দাম তুলনা করে নিন।\n\n

    <b>Credit:</b><font color = "Blue">https://www.breakingnews.com.bd</font>\n\n

</string>

    <string name="welcome_Page_Text"> <i>"\" ভ্রমণ প্রথমে তোমাকে নির্বাক করে দেবে,  তারপর তোমাকে গল্প বলতে বাধ্য করবে। "\"\n </i></string>
        <string name = "ibn_batuta"><i> – ইবনে বতুতা </i></string>


<string name = "division">Search Division</string>


<string name = "travelText">
দেশের যেকোন স্থান থেকে চট্টগ্রাম হয়ে বান্দরবান যাওয়া যাবে। ঢাকা বা চট্টগ্রাম থেকে রয়েছে বান্দরবানগামী বাস। কক্সবাজার থেকেও বাসে বান্দরবান যাওয়া যায়। চট্গ্রাম বা কক্সবাজার থেকে বাসে দুই-আড়াই ঘন্টায় বান্দরবান পৌঁছা সম্ভব। বান্দরবান থেকে বিভিন্ন দর্শনীয় স্থান দেখতে যাবার জন্য ভাড়ায় গাড়ী পাওয়া যায়। বিভিন্ন ধরনের জীপ এবং চান্দের গাড়ী বাস টার্মিনালের কাছেই পর্যটকদের জন্য সার বেধে অপেক্ষমান থাকে সকাল থেকে। একদিনে রাজবাড়ী, মেঘলা, নীলাচল, চিম্বুক, স্বর্ন মন্দির, শৈলপ্রপাত, নীলগিরি ইত্যাদি দর্শনীয় স্থানগুলো ঘুরে দেখার জন্য চার-পাঁচ হাজার টাকায় একটি গাড়ী ভাড়া নিতে পারেন। উল্লেখিত স্থানগুলো দেখতে যে রাস্তা পাড়ি দিতে হবে তার সবগুলোই বেশ ভাল। আঁকা-বাঁকা পাহাড়ী রাস্তায় প্রচুর চড়াই-উৎরাই থাকলেও প্রায় পুরো রাস্তাই পিচ ঢালা। তবে স্থানীয় অভিজ্ঞ ড্রাইভার ছাড়া এসব রাস্তায় না যাওয়াই উত্তম। নিজস্ব গাড়ী থাকলেও গাড়ী শহরে রেখে যাওয়া ভাল। অথবা ড্রাইভারকে বিশ্রাম দিয়ে একজন স্থানীয় ড্রাইভার নিয়ে আপনার গাড়ীটি নিয়েও যেতে পারেন।\n\n <b>Credit: http://www.bandarban.gov.bd\n\n</b></string>



<string name = "foodText">নীলাচলে কিছুকিছু হোটেল কিংবা রিসোর্ট খাবারের ব্যবস্থা থাকে। তবে নীলাচলে তেমন ভালো খাবারের হোটেল নেই। তাই বান্দরবন শহর থেকে খাবার নিয়ে নেয়া ভালো। বান্দরবন শহরের অদূরেই বেশ উন্নতমানের খাবারের হোটেল রয়েছে। সেখানে বাঙ্গালী খাবারের পাশাপাশি স্থানীয়দের ঐতিহ্যবাহী খাবারগুলোও খুব সহজেই পাওয়া যায়।\n\n <b>Credit:https://www.shajgoj.com</b>\n\n </string>
<string name ="hotelText"><b> হোটেল হিল ভিউ\n </b>
বান্দরবানে প্রবেশ করতেই দেখতে পাবেন শহরের সবচেয়ে বড় আবাসিক হোটেল হিল ভিউ। শহরের কাছেই এ হোটেলের ভাড়া রুমপ্রতি ১০০০-৪০০০ টাকা। ফোন: ০৩৬১-৬৩০৪৫।
<b>\nপর্যটন মোটেল</b>\n
পর্যটন স্পট মেঘলার পাশেই পর্যটন কর্পোরেশন কর্তৃক পরিচালিত পর্যটন মোটেল। যার ভাড়া রুম প্রতি ৮৫০ থেকে ২০০০ টাকার মধ্যে। ফোন: ০৩৬১-৬২৭৪১ এবং ০৩৬১-৬২৭৪২।
<b>\nহলিডে ইন</b> \n
চারিদিকে পাহাড় আর প্রাকৃতিক লেকের কাছাকাছি থাকতে চাইলে যেতে পারেন মেঘলার কাছেই অবস্থিত হলি ডে ইন এ। যার ভাড়া রুম প্রতি ১৫০০-৩০০০ টাকা পর্যন্ত। ফোন: ০৩৬১-৬২৮৯৬
<b>\nভেনাস রিসোর্ট</b>\n
বান্দরবানের মেঘলা এলাকায় অবস্থিত ভেনাস রিসোর্ট। যেখানে রয়েছে পাহাড়ের চূড়ায় ৫টি আধুনিক কটেজ। এছাড়াও রয়েছে ভেনাস চাইনিজ রেস্টুরেন্ট, যেখানে দেশি-বিদেশি মজাদার সব রকমের খাবার পাওয়া যায়। প্রাকৃতিক সৌন্দর্যের সঙ্গে শৈল্পিক ছোঁয়া এবং একাধিক ছোটবড় ভাস্কর্যে সাজানো হয়েছে ভেনাস রিসোর্ট। ফোন- ০৩৬১-৬৩৪০০, ০১৫৫২৮০৮০৬০।
<b>\nহোটেল প্লাজা</b>  \n
এটি বান্দরবানের অন্যতম আধুনিক আবাসিক হোটেল। বান্দরবান শহরের কেন্দ্রবিন্দুতে অবস্থিত এ হোটেলে রাত্রিযাপন করতে পারবেন ১০০০-৪০০০ টাকার মধ্যে। ফোন: ০৩৬১-৬৩২৫২।
 <b>\nহিলসাইড রিসোর্ট</b>  \n
চিম্বুক যাওয়ার পথে মিলনছড়ি এলাকায় পাহাড়ের বুকে গড়ে ওঠা এ রিসোর্ট বান্দরবানের অন্যতম দৃষ্টিনন্দন রিসোর্ট হিসেবে পরিচিত। যেখানে বসে পাহাড়, নদী আর মেঘের দৃশ্য উপভোগ করতে পারবেন সহজেই। যার ভাড়া রুম প্রতি ১৫০০-৪০০০ টাকার মধ্যেই। ফোন: ০১৫৫৬৫৩৯০২২, ০১৭৩০০৪৫০৮৩।
<b>\nসাকুরা হিল রিসোর্ট</b>\n
চিম্বুক রোডের মিলনছড়ি এলাকার কাছাকাছি এ রিসোর্ট অত্যন্ত দৃষ্টিনন্দন। প্রাকৃতিক ও কোলাহলমুক্ত পরিবেশে থাকতে চাইলে এ রিসোর্ট এর কোন বিকল্প নেই। যার ভাড়া রুম প্রতি ১৫০০-৩০০০ টাকা পর্যন্ত।
<b>\nহোটেল ফোর স্টার</b> \n
এটি বান্দরবান বাজারে অবস্থিত। রুম প্রতি ভাড়া ৩০০-১২০০ টাকা। ফোন:-০৩৬১-৬৩৫৬৬, ০১৮১৩২৭৮৭৩১,০১৫৫৩৪২১০৮৯।
<b>\nহোটেল থ্রি স্টার</b>\n
এটি বান্দরবান বাসস্ট্যান্ডের পাশে অবস্থিত। এটি ৮/১০ জন থাকার মতো ৪ বেডের এমন একটি ফ্ল্যাট। প্রতি নন এসি ফ্ল্যাট-২৫০০ টাকা, এসি-৩০০০ টাকা। ফোন:- ০১৫৫৩৪২১০৮৯।
    \n\n<b>সময়ের সাথে তথ্য পরিবর্তন হতে পারে</b>\n\n <b>Credit: http://www.bbarta24.net </b>\n\n</string>






























</resources>
