<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".DiaryActivity">

    <EditText
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:hint="@string/tour_id_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tourIdTextId"/>
    <EditText
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:hint="@string/date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dateTextId"/>
    <EditText
        android:padding="10dp"
        android:hint="@string/location_text"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/locationTextId"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/costTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:padding="10dp"
        android:hint="@string/cost_text"
        android:textSize="20sp"
        />
    <Button
        android:textAllCaps="false"
        android:text="Save"
        android:id="@+id/save_btn_Id"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="55dp"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        />

    <Button
        android:textAllCaps="false"
        android:id="@+id/show_btn_Id"
        android:text="Show List"
        android:layout_marginTop="10dp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:layout_marginLeft="55dp"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        />
    <Button
        android:textAllCaps="false"
        android:text="Update"
        android:id="@+id/update_btn_Id"
        android:layout_marginTop="10dp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:layout_marginLeft="55dp"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        />
    <Button
        android:textAllCaps="false"
        android:text="Delete"
        android:id="@+id/delete_btn_Id"
        android:layout_marginTop="10dp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:layout_marginLeft="55dp"
        android:shadowColor="#7C1E1E"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        />

</LinearLayout>