<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feedBackActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextNameId"
        android:layout_margin="20dp"
        android:hint="@string/feedback_name__text"
        android:textColorHint="@color/colorAccent"
        />

    <EditText
        android:textColorHint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEmailId"
        android:layout_margin="20dp"
        android:hint="@string/feedback_email__text"
        />

    <EditText
        android:textColorHint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextMsgId"
        android:layout_margin="20dp"
        android:hint="@string/feedback_msg_Text"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"

        >
        <Button

            android:id="@+id/submitButtonId"
            android:textAllCaps="false"
            android:text="Submit"
            android:layout_marginTop="15dp"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:layout_marginLeft="5dp"
            android:shadowColor="#EA1736"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            />
        <Button

            android:textAllCaps="false"
            android:id="@+id/clearButtonId"
            android:text="Clear"
            android:layout_marginTop="15dp"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:layout_marginLeft="5dp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            />
    </LinearLayout>

</LinearLayout>